--- a/index.html
+++ b/index.html
@@ -37,6 +37,33 @@
     <button class="control-box__btn">売却</button>
     <button class="control-box__btn">引越し<div class="control-box__btn--prepare"><i class="fa fa-hand-paper-o"></i></div></button>
   </div>
+  <div class="header-info">
+    <div class="container">
+      さいたま市西区の土地 物件一覧ページ。面積（坪数）や価格（坪単価）で絞り込み、簡単に比較・資料請求。西区で土地（売地）の購入・分譲地探しなら
+    </div>
+  </div>
+  <div class="breadcrumb">
+    <div class="container">
+      <span class="bread">
+        不動産・住宅情報サイトLIFULL HOME'S
+      </span>
+      <span class="bread">
+        土地
+      </span> >
+      <span class="bread">
+        関東
+      </span> >
+      <span class="bread">
+        埼玉県
+      </span> >
+      <span class="bread">
+        さいたま市
+      </span> >
+      <span class="bread">
+        西区の土地 物件一覧
+      </span>
+    </div>
+  </div>
 
   <div class="container main">
     <div class="contents-header">
