--- a/list.html
+++ b/list.html
@@ -131,7 +131,204 @@
           </div>
 
           <div class="mainplane__base">
+            <div class="mainplane__title">
+              <soan class="mainplane__category">土地</soan>
+              <soan class="mainplane__type">分譲</soan>
+              <a href="#" class="mainplane__title--link">エイワタウン都島本通5丁目2期・3期</a>
+            </div>
+            <div class="row">
+              <div class="col-md-4">
+                <div class="mainplane__photo">
+                  <img class="photo-thumnail" src="https://images.homify.com/c_fill,f_auto,q_auto:eco,w_440/v1444216064/p/photo/image/977954/iwajyuku_002.jpg">
+                </div>
+              </div>
+              <div class="col-md-8">
+                <table class="mainplane__table">
+                  <tbody>
+                    <tr>
+                      <th>交通 / 所在地</th>
+                      <td colspan="3">テスト</td>
+                    </tr>
+                    <tr>
+                      <th>現況</th>
+                      <td>更地</td>
+                      <th>建築条件</th>
+                      <td>無</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+            <div class="mainplane__sub-info">
+              <div class="mainplane__sub-info__title">
+                掲載物件への不動産会社コメント
+              </div>
+              <div class="mainplane__sub-info__body">
+                お気軽にご連絡下さい
+              </div>
+              <table class="mainplane__sub-info__table">
+                <thead>
+                  <th>価格</th>
+                  <th>土地面積</th>
+                  <th>坪（坪単価）</th>
+                  <th>建ぺい率/容積率</th>
+                  <th>画像</th>
+                  <th>お気に入り</th>
+                  <th>詳細</th>
+                </thead>
+                <tbody>
+                  <td class="price">990万円</td>
+                  <td>219.48m²</td>
+                  <td>66.39坪（15万円）</td>
+                  <td>60% / 200%</td>
+                  <td>6枚</td>
+                  <td>
+                    <button class="mainplane__btn">
+                      <i class="fa fa-save"></i> お気に入りへ
+                    </button>
+                  </td>
+                  <td>
+                    <button class="mainplane__btn">
+                      <i class="fa fa-save"></i> 詳細
+                    </button>
+                  </td>
+                </tbody>
+              </table>
+            </div>
+          </div>
 
+          <div class="mainplane__base">
+            <div class="mainplane__title">
+              <soan class="mainplane__category">土地</soan>
+              <soan class="mainplane__type">分譲</soan>
+              <a href="#" class="mainplane__title--link">エイワタウン都島本通5丁目2期・3期</a>
+            </div>
+            <div class="row">
+              <div class="col-md-4">
+                <div class="mainplane__photo">
+                  <img class="photo-thumnail" src="https://images.homify.com/c_fill,f_auto,q_auto:eco,w_440/v1444216064/p/photo/image/977954/iwajyuku_002.jpg">
+                </div>
+              </div>
+              <div class="col-md-8">
+                <table class="mainplane__table">
+                  <tbody>
+                    <tr>
+                      <th>交通 / 所在地</th>
+                      <td colspan="3">テスト</td>
+                    </tr>
+                    <tr>
+                      <th>現況</th>
+                      <td>更地</td>
+                      <th>建築条件</th>
+                      <td>無</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+            <div class="mainplane__sub-info">
+              <div class="mainplane__sub-info__title">
+                掲載物件への不動産会社コメント
+              </div>
+              <div class="mainplane__sub-info__body">
+                お気軽にご連絡下さい
+              </div>
+              <table class="mainplane__sub-info__table">
+                <thead>
+                  <th>価格</th>
+                  <th>土地面積</th>
+                  <th>坪（坪単価）</th>
+                  <th>建ぺい率/容積率</th>
+                  <th>画像</th>
+                  <th>お気に入り</th>
+                  <th>詳細</th>
+                </thead>
+                <tbody>
+                  <td class="price">990万円</td>
+                  <td>219.48m²</td>
+                  <td>66.39坪（15万円）</td>
+                  <td>60% / 200%</td>
+                  <td>6枚</td>
+                  <td>
+                    <button class="mainplane__btn">
+                      <i class="fa fa-save"></i> お気に入りへ
+                    </button>
+                  </td>
+                  <td>
+                    <button class="mainplane__btn">
+                      <i class="fa fa-save"></i> 詳細
+                    </button>
+                  </td>
+                </tbody>
+              </table>
+            </div>
+          </div>
+
+          <div class="mainplane__base">
+            <div class="mainplane__title">
+              <soan class="mainplane__category">土地</soan>
+              <soan class="mainplane__type">分譲</soan>
+              <a href="#" class="mainplane__title--link">エイワタウン都島本通5丁目2期・3期</a>
+            </div>
+            <div class="row">
+              <div class="col-md-4">
+                <div class="mainplane__photo">
+                  <img class="photo-thumnail" src="https://images.homify.com/c_fill,f_auto,q_auto:eco,w_440/v1444216064/p/photo/image/977954/iwajyuku_002.jpg">
+                </div>
+              </div>
+              <div class="col-md-8">
+                <table class="mainplane__table">
+                  <tbody>
+                    <tr>
+                      <th>交通 / 所在地</th>
+                      <td colspan="3">テスト</td>
+                    </tr>
+                    <tr>
+                      <th>現況</th>
+                      <td>更地</td>
+                      <th>建築条件</th>
+                      <td>無</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+            <div class="mainplane__sub-info">
+              <div class="mainplane__sub-info__title">
+                掲載物件への不動産会社コメント
+              </div>
+              <div class="mainplane__sub-info__body">
+                お気軽にご連絡下さい
+              </div>
+              <table class="mainplane__sub-info__table">
+                <thead>
+                  <th>価格</th>
+                  <th>土地面積</th>
+                  <th>坪（坪単価）</th>
+                  <th>建ぺい率/容積率</th>
+                  <th>画像</th>
+                  <th>お気に入り</th>
+                  <th>詳細</th>
+                </thead>
+                <tbody>
+                  <td class="price">990万円</td>
+                  <td>219.48m²</td>
+                  <td>66.39坪（15万円）</td>
+                  <td>60% / 200%</td>
+                  <td>6枚</td>
+                  <td>
+                    <button class="mainplane__btn">
+                      <i class="fa fa-save"></i> お気に入りへ
+                    </button>
+                  </td>
+                  <td>
+                    <button class="mainplane__btn">
+                      <i class="fa fa-save"></i> 詳細
+                    </button>
+                  </td>
+                </tbody>
+              </table>
+            </div>
           </div>
       </div>
     </div>
