--- a/list.html
+++ b/list.html
@@ -81,7 +81,7 @@
             </div>
           </div>
           <div class="description-body">
-
+            <div class="comming_soon">Comming Soon</div>
           </div>
         </div>
 
@@ -92,7 +92,7 @@
             </div>
           </div>
           <div class="description-body">
-
+            <div class="comming_soon">Comming Soon</div>
           </div>
         </div>
 
@@ -103,7 +103,7 @@
             </div>
           </div>
           <div class="description-body">
-
+            <div class="comming_soon">Comming Soon</div>
           </div>
         </div>
 
